...
    }()
    static let reuseIdentifier = "ImageListCell"
    
    override func prepareForReuse() {
        super.prepareForReuse()
     
        likeButton.accessibilityIdentifier = "LikeButton"
        cellImageView.kf.cancelDownloadTask()
    }
}

extension ImageListCell {
    public func configCell(cellImage: UIImage, photoDate: Date?, isImageLike: Bool) {
...
        
        guard let buttonImage = isImageLike ? UIImage(named: "Active") : UIImage(named: "No Active") else {
            assertionFailure("configCell: failed to get likeButton image")
            return
        }
        likeButton.setImage(buttonImage, for: .normal)
        likeButton.accessibilityIdentifier = isImageLike ? "LikeButton" : "UnlikeButton"
    }
    
    public func setIsLike(isImageLike: Bool) {
        guard let buttonImage = isImageLike ? UIImage(named: "Active") : UIImage(named: "No Active") else {
            assertionFailure("configCell: failed to get likeButton image")
            return
...
