...
    override func viewDidLoad() {
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        
        super.viewDidLoad()
        
        scrollView.accessibilityIdentifier = "ScrollImageView"
        backButton.accessibilityIdentifier = "BackButton"
        
        loadImage()
    }
}

extension SingleImageViewController: UIScrollViewDelegate {
...
