...
    
    @IBOutlet private weak var login: UIButton!
   
    override func viewDidLoad() {
        super.viewDidLoad()
        
        login.accessibilityIdentifier = "Authenticate"
    }
    
    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
        if segue.identifier == AuthViewController.ReuseIdentifier {
            guard let webView = segue.destination as? WebViewViewController else {
                assertionFailure("failed to customize seque.destination to WebViewViewController")
...
